<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/input_edit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_the_model_number"
        android:inputType="text"
        android:paddingTop="@dimen/small_padding"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/done" />

    <ImageView
        android:id="@+id/mac_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/my_image"
        app:srcCompat="@drawable/macbookpro2345" />

    <TextView
        android:id="@+id/textView"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/info_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/info_text"
            style="@style/InfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information" />
    </ScrollView>


</LinearLayout>

</layout>